<resources>
    <string name="app_name">TransitNow</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_dashboard"> </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_profile">My Profile</string>

    <string-array name="Drivers">
        <item>Driver 1</item>
        <item>Driver 2</item>
        <item>Driver 3</item>
        <item>Driver 4</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <string-array name="Option">
        <item>Driver</item>
        <item>Passenger</item>
    </string-array>
</resources>
