<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />


            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="Address"
                android:inputType="text"

                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/edtEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />


            <EditText
                android:id="@+id/edtMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="Mobile Number"
                android:inputType="text|phone"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:background="@color/input_register_bg"
                    android:text="   Male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/input_register_bg"
                    android:text="   Female"
                    android:textColor="@color/white" />

            </RadioGroup>

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/input_register_bg"
                android:hint="Username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />


            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@color/input_register_bg"
                android:entries="@array/Option"

                >

            </Spinner>

            <!-- Login Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#FF180C00"
                android:text="@string/btn_register"
                android:textColor="@color/white" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>